fixing link overflow

--- a/djsite/static/base.css
+++ b/djsite/static/base.css
@@ -148,7 +148,7 @@ h1 {
 .blog_entry {
     font-family: "pt sans", sans-serif;
     overflow: hidden;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .blog_title {
@@ -157,6 +157,11 @@ h1 {
     text-overflow: ellipsis;
     white-space: nowrap;
     display: block;
+}
+
+.blog_title a:hover {
+    text-decoration: none;
+    border-bottom: 1px solid #004488;
 }
 
 .blog_info {
